feat(api): implement subscription endpoints
* feat: implement basic subscription endpoints

* fix: add user entity to mock tests

* chore: update openapi schema and api-client

* fix: determine user id from request

* chore: rebase and fix liting

* fix: create get subscription entity, various fixes

* chore: pr comments

* chore: remove update subscription endpoint (same as delete)
