# packages/api/src/modules/subscription/constants/errors.ts
@@ -1,0 +1,7 @@
+export const SUBSCRIBER_NOT_EXIST = 'Subscriber does not exist'
+export const CREATOR_NOT_EXIST = 'Creator does not exist'
+export const IS_NOT_CREATOR = 'Cannot subscribe to non-creator'
+export const SUBSCRIPTION_NOT_EXIST = 'Subscription does not exist'
+export const SUBSCRIPTION_NOT_OWNED_BY_USER =
+  'Subscription is not owned by user'
+export const SUBSCRIPTION_ALREADY_EXIST = 'Subscription already exists'
