# packages/api/src/modules/subscription/dto/update-subscription.dto.ts
@@ -1,5 +1,7 @@
-import { PartialType } from '@nestjs/swagger'
+import { OmitType } from '@nestjs/swagger'
 
 import { CreateSubscriptionDto } from './create-subscription.dto'
 
-export class UpdateSubscriptionDto extends PartialType(CreateSubscriptionDto) {}
+export class UpdateSubscriptionDto extends OmitType(CreateSubscriptionDto, [
+  'creatorUserId',
+] as const) {}
