# packages/api/src/modules/subscription/subscription.controller.ts
@@ -5,13 +5,14 @@ import {
   Get,
   HttpStatus,
   Param,
-  Patch,
   Post,
+  Req,
 } from '@nestjs/common'
 import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger'
 
+import { RequestWithUser } from '../../types'
 import { CreateSubscriptionDto } from './dto/create-subscription.dto'
-import { UpdateSubscriptionDto } from './dto/update-subscription.dto'
+import { GetSubscriptionDto } from './dto/get-subscription.dto'
 import { SubscriptionService } from './subscription.service'
 
 @ApiTags('subscription')
@@ -21,15 +22,16 @@ export class SubscriptionController {
 
   @ApiOperation({ summary: 'Creates a subscription' })
   @ApiResponse({
-    status: HttpStatus.OK,
+    status: HttpStatus.CREATED,
     type: CreateSubscriptionDto,
     description: 'A subscription was created',
   })
   @Post()
   async create(
+    @Req() req: RequestWithUser,
     @Body() createSubscriptionDto: CreateSubscriptionDto,
-  ): Promise<CreateSubscriptionDto> {
-    return this.subscriptionService.create(createSubscriptionDto)
+  ): Promise<GetSubscriptionDto> {
+    return this.subscriptionService.create(req.user.id, createSubscriptionDto)
   }
 
   @ApiOperation({ summary: 'Gets a subscription' })
@@ -39,23 +41,29 @@ export class SubscriptionController {
     description: 'A subscription was retrieved',
   })
   @Get(':id')
-  async findOne(@Param('id') id: string): Promise<CreateSubscriptionDto> {
+  async findOne(@Param('id') id: string): Promise<GetSubscriptionDto> {
     return this.subscriptionService.findOne(id)
   }
 
-  @ApiOperation({ summary: 'Updates a subscription' })
-  @ApiResponse({
-    status: HttpStatus.OK,
-    type: undefined,
-    description: 'A subscription was updated',
-  })
-  @Patch(':id')
-  async update(
-    @Param('id') id: string,
-    @Body() updateSubscriptionDto: UpdateSubscriptionDto,
-  ) {
-    return this.subscriptionService.update(id, updateSubscriptionDto)
-  }
+  // TODO: Do we need this? Can only disable subscriptions, same as DELETE endpoint
+  // @ApiOperation({ summary: 'Updates a subscription' })
+  // @ApiResponse({
+  //   status: HttpStatus.OK,
+  //   type: undefined,
+  //   description: 'A subscription was updated',
+  // })
+  // @Patch(':id')
+  // async update(
+  //   @Req() req: RequestWithUser,
+  //   @Param('id') id: string,
+  //   @Body() updateSubscriptionDto: UpdateSubscriptionDto,
+  // ): Promise<GetSubscriptionDto> {
+  //   return this.subscriptionService.update(
+  //     req.user.id,
+  //     id,
+  //     updateSubscriptionDto,
+  //   )
+  // }
 
   @ApiOperation({ summary: 'Deletes a subscription' })
   @ApiResponse({
@@ -64,7 +72,10 @@ export class SubscriptionController {
     description: 'A subscription was deleted',
   })
   @Delete(':id')
-  async remove(@Param('id') id: string) {
-    return this.subscriptionService.remove(id)
+  async remove(
+    @Req() req: RequestWithUser,
+    @Param('id') id: string,
+  ): Promise<GetSubscriptionDto> {
+    return this.subscriptionService.remove(req.user.id, id)
   }
 }
